# bind-rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: test.yml
bind-rs/: Cargo.toml
bind-rs/src/: bind.rs  future.rs  identity.rs  lib.rs  reader.rs  reader_future.rs  reader_writer.rs  writer.rs
bind-rs_derive/: Cargo.toml
bind-rs_derive/src/: lib.rs
bind-rs_derive/tests/: test_derive.rs
examples/: balance.rs
src/: bind.rs  control.rs  future.rs  lib.rs  reader.rs  reader_future.rs  reader_owned.rs  reader_writer.rs  state.rs  writer.rs
